Spacing problems with portfolio items resolved

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,8 @@
 }
 header{
     background-color: #003049;
+    position: sticky;
+    top:0px;
 }
 header::after{
     content: "";
@@ -29,9 +31,16 @@ h1{
 }
 h2{
     font-size:3rem;
-    font-family:"Helvetica Neue",sans-serif;
     margin:0;
     color: #F77F00;
+}
+h3{
+    font-size:2.5rem;
+    color: #EAE2B7;
+}
+h4{
+    font-size:1.5rem;
+    color: #EAE2B7;
 }
 .nav-bar a{
     font-size:2.5rem;
@@ -74,5 +83,7 @@ h2{
 }
 .port-cont{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    width:1000px;
+    margin: 0 auto;
 }
